--- a/06-1-regression.Rmd
+++ b/06-1-regression.Rmd
@@ -2905,6 +2905,16 @@ The maximum Likelihood estimator (assuming the distribution is correctly specifi
     + Adds an assumption that we know the distribution (which is similar to [A6 Normal Distribution] in linear model)
     + will produce a more efficient estimator.
 
+### Compare to OLS
+
+MLE is not a cure for most of OLS problems:  
+
+ * To do joint inference in MLE, we typically use log-likelihood calculation, instead of F-score  
+ * Functional form affects estimation of MLE and OLS.  
+ * Perfect Collinearity/Multicollinearity: highly correlated are likely to yield large standard errors.  
+ * Endogeneity (Omitted variables bias, Simultaneous equations): Like OLS, MLE is also biased against this problem 
+
+
 ### Application 
 
 Other applications of MLE   
