--- a/19-ANOVA.Rmd
+++ b/19-ANOVA.Rmd
@@ -256,7 +256,7 @@ $E(MSTR)=\sigma^2+\frac{\sum_{i}n_i(\mu_i-\mu_.)^2}{a-1}$\
 where $\mu_.=\frac{\sum_{i=1}^{a}n_i\mu_i}{\sum_{i=1}^{a}n_i}$\
 If all treatment means are equals (=$\mu_.$), $E(MSTR)=\sigma^2$.
 
-Then we can use an F-test for teh equality of all treatment means:
+Then we can use an F-test for the equality of all treatment means:
 
 $$H_0:\mu_1=\mu_2=..=\mu_a$$
 
@@ -1129,7 +1129,7 @@ $$
 \hat{S} = d_1 MS_1 + ...+ d_h  MS_h 
 $$
 
-Let $df_i$ be the degrees of freedom associated with teh mean square $MS_i$. The **Satterthwaite** approximation:
+Let $df_i$ be the degrees of freedom associated with the mean square $MS_i$. The **Satterthwaite** approximation:
 
 $$
 \frac{(df)\hat{S}}{S} \sim \chi^2_{df}
@@ -1916,7 +1916,7 @@ $$
 
 ### Kruskal-Wallis
 
-Generalization of independent samples Wilcoxon Rank sum test for 2 independent samples (like F-test of one-way ANOVA is a generalization to several independent maples of the two sample t-test)
+Generalization of independent samples Wilcoxon Rank sum test for 2 independent samples (like F-test of one-way ANOVA is a generalization to several independent samples of the two sample t-test)
 
 Consider the one-way case:
 
@@ -2225,7 +2225,7 @@ cov(Y_{ij},Y_{ij'}) = \sigma^2 , j \neq j' \text{ treatments within same block a
 cov(Y_{ij},Y_{i'j'}) = 0 , i \neq i' , j \neq j'
 $$
 
-Correlation between 2 observations in teh same block
+Correlation between 2 observations in the same block
 
 $$
 \frac{\sigma^2_{\rho}}{\sigma^2 + \sigma^2_{\rho}}
