--- a/under_construction/_econ_note.Rmd
+++ b/under_construction/_econ_note.Rmd
@@ -383,7 +383,7 @@ $$
 
 Are Partial Effects Causal Effects?
 
--   When we're interested in teh causal effect of $W$ on $Y$
+-   When we're interested in the causal effect of $W$ on $Y$
 
 $$
 E(Y|W, \mathbf{C})
