--- a/under_construction/_test.Rmd
+++ b/under_construction/_test.Rmd
@@ -215,7 +215,7 @@ Visualizing
 
 -   For algebraic simpllicity and numericala stability, we use the log-likelihood (the shape changes, the max is unchanged)
 
--   Summary Estimator: The likelihood curve (Likelihood principle: we can now discard teh data - if the model is correct)
+-   Summary Estimator: The likelihood curve (Likelihood principle: we can now discard the data - if the model is correct)
 
 -   One-point summary: at the maximum is the MLE
 
